--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "moment": "^2.22.2",
     "mongoose": "^5.2.1",
     "passport": "^0.4.0",
