--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "engines": {
+    "node":"8.11.3"
+  },
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
